# horizon-os

./: .env.example  .gitignore  COMMAND_CENTER.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
db/: schema.sql  sqlite-vec-next.sql
docs/: CONTENT_STRATEGY.md  PORTFOLIO_STRATEGY.md  STARTUP_PLAYBOOK.md  agent-api-research-notes.md  agent-prompts.md  calendar-connector-architecture.md  capital-goals-2027.md  capital-runway-os.md  claude-usage.md  command-center-plan.md  competitive-landscape-2026-07.md  component-forge-offer.md  content-pipeline-architecture.md  context-architecture.md  document-security.md  executable-action-queue.md  founder-playbook-research.md  gemini-jules-setup.md  horizon-build-plan.md  horizon-compound-wiki.md  horizon-design-tokens.md  horizon-living-memory-backlog.md  horizon-operating-plan.md  infrastructure.md  (+22 more)
public/documents/antharmaya-labs/: .gitignore  README.md  pyproject.toml
public/documents/antharmaya-labs/.github/workflows/: ci.yml
public/documents/antharmaya-labs/infra/: README.md
public/documents/antharmaya-labs/infra/skypilot/: foundations.yaml
public/documents/antharmaya-labs/labs/00-foundations/: GUIDE.md  PROMPTS.md
public/documents/antharmaya-labs/labs/01-transformer/: README.md
public/documents/antharmaya-labs/labs/02-scaling/: README.md
public/documents/antharmaya-labs/labs/03-kernels/: README.md
public/documents/antharmaya-labs/labs/04-inference/: README.md
public/documents/antharmaya-labs/site/: README.md
(+185 files in other folders)
